all requirements fulfilled.

--- a/ShoppingGPT-main/templates/index.html
+++ b/ShoppingGPT-main/templates/index.html
@@ -14,7 +14,8 @@
   <meta property="og:image"
     content="https://pubcdn.ivymoda.com/files/news/2023/10/03/6ec1f0523de6ac27cba6eff1b574f1ec.jpg" />
   <link rel="manifest" href="https://metagent.vn/manifest.json?gcm_sender_id=" />
-  <script type="text/javascript">
+  <!--
+    <script type="text/javascript">
     var base_url = 'https://metagent.vn/';
     var static_url = 'https://pubcdn.ivymoda.com/metagent/assets/';
     var guest_user = 'guest:d115d99909331aed9e0ea4d67cfd3775';
@@ -30,6 +31,17 @@
       return Date.parse(date.replace(/-/g, '/').replace(/[a-z]+/gi, ' '));
     }
   </script>
+-->
+   <div id="google_translate_element"></div>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement(
+    {pageLanguage: 'vi', includedLanguages: 'en'},
+    'google_translate_element'
+  );
+}
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
